--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ PyRect==0.2.0
 pyRFC3339==1.1
 PyScreeze==0.1.28
 pytheons.pyunit==1.0.3
-python-apt==0.7.8
+python-apt
 python-dateutil==2.8.1
 python-debian==0.1.36
 python-dotenv==0.17.1
