--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,7 @@ pyxdg==0.26
 PyYAML==5.3.1
 qt5-applications==5.15.2.2.2
 qt5-tools==5.15.2.1.2
-reportlab==3.5.34
+reportlab
 requests==2.22.0
 requests-unixsocket==0.2.0
 say==1.6.6
