--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,9 @@ colorama==0.4.4
 combomethod==1.0.12
 cycler==0.10.0
 decorator==5.0.9
-defer
+defer==1.0.6
 distro==1.4.0
-distro-info
+distro-info===0.23ubuntu1
 docopt==0.6.2
 Eel==0.12.4
 entrypoints==0.3
@@ -34,7 +34,7 @@ launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 lockfile==0.12.2
-louis==1.3
+louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
 MarkupSafe==1.1.0
@@ -75,9 +75,11 @@ PyQt5-stubs==5.15.2.0
 PyRect==0.2.0
 pyRFC3339==1.1
 PyScreeze==0.1.28
+pytest==8.3.3
 pytheons.pyunit==1.0.3
+python-apt==2.0.0+ubuntu0.20.4.7
 python-dateutil==2.8.1
-python-debian==0.1.36
+python-debian===0.1.36ubuntu1
 python-dotenv==0.17.1
 python3-xlib==0.15
 pytweening==1.0.4
@@ -88,7 +90,7 @@ pyxdg==0.26
 PyYAML==5.3.1
 qt5-applications==5.15.2.2.2
 qt5-tools==5.15.2.1.2
-reportlab
+reportlab==3.5.34
 requests==2.22.0
 requests-unixsocket==0.2.0
 say==1.6.6
@@ -96,12 +98,20 @@ SecretStorage==2.3.1
 simplejson==3.16.0
 simplere==1.2.13
 six==1.12.0
+systemd-python==234
 testresources==2.0.1
 textdata==2.4.1
 textwrap3==0.9.2
 traitlets==5.0.5
+ubuntu-advantage-tools==27.6
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+usb-creator==0.3.7
 wadllib==1.3.3
 wcwidth==0.2.5
 whichcraft==0.6.1
+xkit==0.0.0
 zope.event==4.5.0
 zope.interface==5.4.0
