--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ combomethod==1.0.12
 cycler==0.10.0
 decorator==5.0.9
 distro==1.4.0
-distro-info===0.23ubuntu1
+distro-info===0.23
 docopt==0.6.2
 Eel==0.12.4
 entrypoints==0.3
@@ -76,9 +76,9 @@ pyRFC3339==1.1
 PyScreeze==0.1.28
 pytest==8.3.3
 pytheons.pyunit==1.0.3
-python-apt==2.0.0+ubuntu0.20.4.7
+python-apt==2.0.0
 python-dateutil==2.8.1
-python-debian===0.1.36ubuntu1
+python-debian===0.1.36
 python-dotenv==0.17.1
 python3-xlib==0.15
 pytweening==1.0.4
