--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Test the application
         run: npm test
+      - name: Test the application
+        run: pytest
