--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ PyNaCl==1.3.0
 pyparsing==2.4.7
 pyperclip==1.8.2
 PyQt5==5.15.4
-pyqt5-plugins==5.15.4.2.2
+pyqt5-plugins
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
 PyQt5-stubs==5.15.2.0
