--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ mementos==1.3.1
 monotonic==1.5
 MouseInfo==0.1.3
 nulltype==2.3.1
-numpy==1.20.3
+numpy
 olefile==0.46
 options==1.4.10
 paramiko==2.6.0
