--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "test-prodotto": "pytest -v tests/unit/TestProdotto.py",
       "test-integration": "pytest -v tests/integration/TestIntegration.py",
       "test-database": "pytest -v tests/integration/TestDatabaseAndModel.py"
+      "test-gui": "pytest -v tests/integration/TestGUI.py"
     },
     "dependencies": {
     "pytest": "^8.3.3"
