--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: source my_env/Scripts/activate
       - name: Test the application
         run: |
-          pytest -v tests/unit/TestFornitore.py tests/unit/TestOrdine.py tests/unit/TestPersonale.py tests/unit/TestProdotto.py tests/integration/TestIntegration.py tests/integration/TestDatabaseAndModel.py tests/unit/TestGUI.py
+          pytest -v tests/unit/TestFornitore.py tests/unit/TestOrdine.py tests/unit/TestPersonale.py tests/unit/TestProdotto.py tests/integration/TestIntegration.py tests/integration/TestDatabaseAndModel.py tests/integration/TestGUI.py
